--- a/Exercicios/ex 025/form003.html
+++ b/Exercicios/ex 025/form003.html
@@ -21,10 +21,19 @@
             <input type="month" name="mes" id="imes" value="2023-07">
         </p>
         <p>
+            <label for="idia">Dia da prova</label>
+            <input type="date" name="dia" id="idia" value="2023-07-28">
+        </p>
+        <p>
+            <label for="ihora">Hora da prova</label>
+            <input type="time" name="hora" id="ihora" value="12:00">
+        </p>
+        <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
 
         </p>
+
     </form>
 </body>
 </html>
